# rbm-diffusion

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  formatting.yaml
cmake/: FindOpenBLAS.cmake
docs/: pull_request_template.md
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt  one-speed-1D.cpp
examples/2D-multislab-reflector/: rbm.xml
examples/2D-slab-reflector/: rbm.xml
examples/square_pin/: rbm.xml
include/rbm/: cell.hpp  input.hpp  linalg.hpp  material.hpp  mesh.hpp  meshElement.hpp  parameter.hpp  rbm.hpp  rbmEnums.hpp  region.hpp
include/rbm/archive/: linalg.hpp  matrix.hpp
src/: CMakeLists.txt  cell.cpp  input.cpp  linalg.cpp  linalg.hpp  main.cpp  material.cpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  meshElement.cpp  rbm.cpp  region.cpp
src/archive/: linalg.cpp  matrix.cpp
tests/: CMakeLists.txt  README.md  test_cell.cpp  test_input.cpp  test_linalg.cpp  test_material.cpp  test_matrix.cpp  test_mesh.cpp  test_meshElement.cpp  test_rbm.cpp  unit_test_framework.hpp
tests/archive/: test_matrix.cpp
tests/regression_tests/: test_1D_mesh.cpp  test_2D_mesh.cpp
tests/supporting/: iris_pcas.csv  test.xml
